components/SongSearchPage.module.scss
.SongSearchPage {
  font-family: "M PLUS 1", "Arial", sans-serif;
  text-align: center;
  margin: 0 auto;
  padding: 1rem;
  max-width: 800px;

  .top {
    display: flex;

    .button {
      align-self: center;
      line-height: 1;
      width: 2.5rem;
      height: 2.5rem;
      font-size: 1.25rem;
      border: none;
      border-radius: 2rem;

      a {
        text-decoration: none;
      }
    }

    .input {
      margin: 0 0.5rem;
      padding: 1rem;
      flex-grow: 1;
      border-radius: 3rem;
    }
  }
}

.modal {
  padding: 1rem;

  .closeButton {
    position: absolute;
    top: -2.5rem;
    right: 0;
    width: 2.5rem;
    height: 2.5rem;
    border-style: solid;
    z-index: 11;
    opacity: 0;

    &:focus {
      opacity: 1;
    }
  }
}

